# clair_config

./: .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  TODO.md  clair_config.py  config.toml  main.py  pyproject.toml
.claude/: settings.json
backlog/: config.yml
backlog/tasks/: task-001 - Refactor-UI-layout-to-match-original-ClairObscur-UConfig-design.md  task-002 - Refactor-clair_config.py-to-reduce-LOC-from-782-to-under-500.md  task-002 - Refactor-main.py-to-reduce-LOC-from-782-to-under-500.md  task-003 - Refactor-main.py-into-frontend-and-backend-architecture.md  task-004 - Migrate-frontend-from-TUI-to-Flet.md
core/: backend.py  frontend.py
static/: styles.tcss
