[project]
name = "clair-config"
version = "0.1.0"
authors = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]

requires-python = ">=3.12,<3.13"

dependencies = [
    "attrs>=25.3.0",
    "flet>=0.28.3,<0.29.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "flet[all]>=0.28.3,<0.29.0",
    "ruff>=0.12.11",
]

test = [
    "coverage<8.0.0,>=7.6.1",
    "hypothesis[cli]<7.0.0,>=6.112.1",
    "pytest<9.0.0,>=8.3.3",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "pytest-cov>=6.1.1",
    "pytest-datafiles<4.0.0,>=3.0.0",
    "pytest-xdist<4.0.0,>=3.6.1",
]
